# VortexVault

./: .gitignore  README.md  docker-compose.yml  initialize.sh  start.sh  stop.sh
cpp/: CMakeLists.txt  Dockerfile
cpp/src/: KDTreeVectorDB.cpp  KDTreeVectorDB.h  embed.cpp  embed.h  main.cpp
frontend/: index.html  scripts.js  styles.css
rust/: Cargo.toml  Dockerfile
rust/src/: embed.rs  kdtree.rs  main.rs
