[package]
name = "vortex-vault-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sentence-transformers = "0.3" # Assuming crate for embeddings
kdtree = "0.7" # For k-d tree, but may need custom for metadata
bincode = "1.3" # For serialization
regex = "1.5"
